# bitcoin-trading-ui

./: .gitignore  Makefile  README.md  pyproject.toml
app/: __init__.py  btc_ui.py  config.ini  config.py
app/pages/: headlines.py
