[tool.poetry]
name = "bitcoin-trading-ui"
version = "0.1.0"
description = ""
authors = ["Philip De Lorenzo <philip.delorenzo@gmail.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.31.1"
pandas = "^2.2.0"
halo = "^0.0.31"
python-dotenv = "^1.0.1"
st-pages = "^0.4.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
